- Fix scroll behaviour on drag start - Fix drag end behvaiour to minimize all expanded dropzones - Make document overflow_y visible

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -168,9 +168,9 @@ html, header, body {
 }
 
 html {
-  @media only screen and (min-width: 768px) {
-    overflow-y: hidden;
-  }
+  // @media only screen and (min-width: 768px) {
+  //   overflow-y: hidden;
+  // }
 
   overflow-x: auto;
 }
